// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages multipleProductValidity should render correctly 1`] = `
<Component
  description="Multiple Product Validity selection page of the Create Fares Data Service"
  errors={Array []}
  title="Multiple Product Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/multipleProductValidity"
    className="multiple-product-validity-page"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <h1
        className="govuk-heading-l"
        id="multiple-product-validity-page-heading"
      >
        When does the product expire?
      </h1>
      <span
        className="govuk-hint"
        id="operator-products-hint"
      >
        Infinity Line
         - 
        2
         products - 
        Adult
      </span>
      <span
        className="govuk-hint"
        id="multiple-product-validity-page-hint"
      >
        We need to know the time that this product would be valid until
      </span>
      <span
        className="govuk-hint"
        id="24hr-validity-type-hint"
      >
        24hr means a ticket purchased at 3pm will be valid until 3pm on its day of expiry
      </span>
      <span
        className="govuk-hint"
        id="calendar-validity-type-hint"
      >
        Calendar day means a ticket purchased at 3pm would be valid until midnight on its day of expiry
      </span>
      <FormElementWrapper
        errorClass="govuk-radios--error"
        errorId="twenty-four-hours-row-0"
        errors={Array []}
      >
        <table
          className="govuk-table multiple-product-validity-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Product Name
              </th>
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Product Price
              </th>
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Product Duration
              </th>
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Choose Validity
              </th>
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          >
            <tr
              className="govuk-table__row"
              key="multiple-product-name-1"
            >
              <td
                className="govuk-table__cell"
              >
                Weekly Ticket
              </td>
              <td
                className="govuk-table__cell"
              >
                £
                50
              </td>
              <td
                className="govuk-table__cell"
              >
                5 undefineds
              </td>
              <td
                className="govuk-table__cell"
              >
                <select
                  aria-labelledby="stop-name-header stop-0 naptan-code-header naptan-0"
                  className="govuk-select farestage-select"
                  id="option-0"
                  name="option-0"
                >
                  <option
                    disabled={true}
                    selected={true}
                    value=""
                  >
                    Select validity
                  </option>
                  <option
                    value="24hr"
                  >
                    24hr
                  </option>
                  <option
                    value="endOfCalendarDay"
                  >
                    Calendar day
                  </option>
                  <option
                    value="serviceDay"
                  >
                    Service day
                  </option>
                </select>
              </td>
            </tr>
            <tr
              className="govuk-table__row"
              key="multiple-product-name-2"
            >
              <td
                className="govuk-table__cell"
              >
                Day Ticket
              </td>
              <td
                className="govuk-table__cell"
              >
                £
                2.50
              </td>
              <td
                className="govuk-table__cell"
              >
                1 undefined
              </td>
              <td
                className="govuk-table__cell"
              >
                <select
                  aria-labelledby="stop-name-header stop-1 naptan-code-header naptan-1"
                  className="govuk-select farestage-select"
                  id="option-1"
                  name="option-1"
                >
                  <option
                    disabled={true}
                    selected={true}
                    value=""
                  >
                    Select validity
                  </option>
                  <option
                    value="24hr"
                  >
                    24hr
                  </option>
                  <option
                    value="endOfCalendarDay"
                  >
                    Calendar day
                  </option>
                  <option
                    value="serviceDay"
                  >
                    Service day
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages multipleProductValidity should render error messaging when errors are passed 1`] = `
<Component
  description="Multiple Product Validity selection page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Select one of the two validity options",
        "id": "twenty-four-hours-row-0",
      },
    ]
  }
  title="Multiple Product Validity - Create Fares Data Service"
>
  <CsrfForm
    action="/api/multipleProductValidity"
    className="multiple-product-validity-page"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Select one of the two validity options",
            "id": "twenty-four-hours-row-0",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <h1
        className="govuk-heading-l"
        id="multiple-product-validity-page-heading"
      >
        When does the product expire?
      </h1>
      <span
        className="govuk-hint"
        id="operator-products-hint"
      >
        Infinity Line
         - 
        2
         products - 
        Adult
      </span>
      <span
        className="govuk-hint"
        id="multiple-product-validity-page-hint"
      >
        We need to know the time that this product would be valid until
      </span>
      <span
        className="govuk-hint"
        id="24hr-validity-type-hint"
      >
        24hr means a ticket purchased at 3pm will be valid until 3pm on its day of expiry
      </span>
      <span
        className="govuk-hint"
        id="calendar-validity-type-hint"
      >
        Calendar day means a ticket purchased at 3pm would be valid until midnight on its day of expiry
      </span>
      <FormElementWrapper
        errorClass="govuk-radios--error"
        errorId="twenty-four-hours-row-0"
        errors={
          Array [
            Object {
              "errorMessage": "Select one of the two validity options",
              "id": "twenty-four-hours-row-0",
            },
          ]
        }
      >
        <table
          className="govuk-table multiple-product-validity-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Product Name
              </th>
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Product Price
              </th>
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Product Duration
              </th>
              <th
                className="govuk-table__header govuk-!-width-one-quarter"
                scope="col"
              >
                Choose Validity
              </th>
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          >
            <tr
              className="govuk-table__row"
              key="multiple-product-name-1"
            >
              <td
                className="govuk-table__cell"
              >
                Weekly Ticket
              </td>
              <td
                className="govuk-table__cell"
              >
                £
                50
              </td>
              <td
                className="govuk-table__cell"
              >
                5 undefineds
              </td>
              <td
                className="govuk-table__cell"
              >
                <select
                  aria-labelledby="stop-name-header stop-0 naptan-code-header naptan-0"
                  className="govuk-select farestage-select"
                  id="option-0"
                  name="option-0"
                >
                  <option
                    disabled={true}
                    selected={true}
                    value=""
                  >
                    Select validity
                  </option>
                  <option
                    value="24hr"
                  >
                    24hr
                  </option>
                  <option
                    value="endOfCalendarDay"
                  >
                    Calendar day
                  </option>
                  <option
                    value="serviceDay"
                  >
                    Service day
                  </option>
                </select>
              </td>
            </tr>
            <tr
              className="govuk-table__row"
              key="multiple-product-name-2"
            >
              <td
                className="govuk-table__cell"
              >
                Day Ticket
              </td>
              <td
                className="govuk-table__cell"
              >
                £
                2.50
              </td>
              <td
                className="govuk-table__cell"
              >
                1 undefined
              </td>
              <td
                className="govuk-table__cell"
              >
                <select
                  aria-labelledby="stop-name-header stop-1 naptan-code-header naptan-1"
                  className="govuk-select farestage-select"
                  id="option-1"
                  name="option-1"
                >
                  <option
                    disabled={true}
                    selected={true}
                    value=""
                  >
                    Select validity
                  </option>
                  <option
                    value="24hr"
                  >
                    24hr
                  </option>
                  <option
                    value="endOfCalendarDay"
                  >
                    Calendar day
                  </option>
                  <option
                    value="serviceDay"
                  >
                    Service day
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </FormElementWrapper>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
